# template

ProjectName/: CMakeLists.txt  main.cpp
ProjectName/libraries/Header Files/QMainWindow/MainWindow/: mainwindow.h
ProjectName/libraries/Source Files/QMainWindow/MainWindow/: mainwindow.cpp
